# joybug-core

./: Cargo.toml  TODO.md  callstack_proposal.md
.github/workflows/: build.yml
docs/: proposed_architecture.md
docs/stepping/: claude_step_in_feature_request.md  gemini_step_in_feature_request.md  o3_step_in_feature_request.md  step_implementation_general_analysis.md
src/: formatting.rs  framed_json_stream.rs  interfaces.rs  lib.rs  main.rs  protocol.rs  protocol_io.rs  server.rs  windows_platform.rs
src/windows_platform/: callstack.rs  debug_events.rs  debugged_process.rs  disassembler.rs  memory.rs  mod.rs  module_manager.rs  process.rs  stepper.rs  symbol_manager.rs  symbol_provider.rs  thread_context.rs  thread_manager.rs  utils.rs
tests/: attach_test.rs  debug_client_ctx_mem_test.rs  debug_client_test.rs  multi_client_test.rs  network_protocol.rs  network_test.rs  stepper_test.rs
