[package]
name = "joybug-basics-tests1"
version = "0.1.0"
edition = "2024"

[lib]
name = "joybug_basics_tests1"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
anyhow = "1.0"
windows-sys = { version = "0.60.0", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Kernel",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp"
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
