[package]
name = "joybug2"
version = "0.1.0"
edition = "2024"

[lib]
name = "joybug2"
path = "src/lib.rs"

[[bin]]
name = "joybug2"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.37", features = ["full", "rt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
windows-sys = { version = "0.60.2", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Kernel",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices"
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Symbol processing dependencies
pelite = "0.10"
pdb = "0.8"
symsrv = "0.5"
msvc-demangler = "0.9"
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"
capstone = "0.12"
regex = "1.10"
